@@ -10,14 +10,12 @@ import dev.goral.rpgmanager.user.User;
 import dev.goral.rpgmanager.user.UserRepository;
 import jakarta.transaction.Transactional;
 import lombok.AllArgsConstructor;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -29,45 +27,78 @@ public class GameService {
     private final RpgSystemsRepository rpgSystemsRepository;
     private final GameRoomManager gameRoomManager;
 
-    public List<GameDTOAdmin> getAllGames() {
+    public Map<String, Object> getAllGames() {
         List<Game> games = gameRepository.findAll();
-        return games.stream()
+        List<GameDTOAdmin> gamesDto = games.stream()
                 .map(game -> new GameDTOAdmin(
                         game.getId(),
                         game.getName(),
                         game.getDescription(),
-                        game.getGameMaster().getId(),
+                        game.getOwner().getId(),
                         game.getRpgSystem().getId(),
                         game.getStatus().toString()
                 ))
-                .collect(Collectors.toList());
+                .toList();
+
+        if (gamesDto.isEmpty()) {
+            throw new ResourceNotFoundException("Nie znaleziono żadnych gier.");
+        }
+        Map<String, Object> response = CustomReturnables.getOkResponseMap("Pobrano wszystkie gry.");
+        response.put("games", gamesDto);
+        return response;
     }
 
-    public GameDTO getGame(Long gameId) {
-        return gameRepository.findGameById(gameId)
+    public Map<String, Object> getGame(Long gameId) {
+        GameDTO gameResponse = gameRepository.findGameById(gameId)
                 .map(game -> new GameDTO(
                         game.getId(),
                         game.getName(),
                         game.getDescription(),
-                        game.getGameMaster().getId(),
+                        game.getOwner().getId(),
                         game.getRpgSystem().getId()
                 ))
                 .orElse(null);
+
+        if (gameResponse == null) {
+            throw new ResourceNotFoundException("Gra o podanym ID nie istnieje.");
+        }
+        Map<String, Object> response = CustomReturnables.getOkResponseMap("Pobrano grę.");
+        response.put("game", gameResponse);
+        return response;
     }
-    
-    public List<GameUsersDTO> getGamePlayers(Long gameId) {
+
+    public Map<String, Object> getGamePlayers(Long gameId) {
         Game game = gameRepository.findById(gameId)
                 .orElseThrow(() -> new ResourceNotFoundException("Gra o podanym ID nie istnieje."));
 
         List<GameUsers> gameUsers = gameUsersRepository.findGameAllUsersByGameId(gameId);
-        return gameUsers.stream()
+        List<GameUsersDTO> gameUsersDTO = gameUsers.stream()
                 .map(gameUser -> new GameUsersDTO(
                         gameUser.getId(),
                         gameUser.getUser().getId(),
                         gameUser.getGame().getId(),
                         gameUser.getRole().toString()
                 ))
-                .collect(Collectors.toList());
+                .toList();
+
+        Map<String, Object> response = CustomReturnables.getOkResponseMap("Pobrano listę użytkowników gry.");
+        response.put("gameUsers", gameUsersDTO);
+        return response;
+    }
+
+    public Map<String, Object> getUserGames(User currentUser) {
+        List<GameUsers> gameUsers = gameUsersRepository.findAllByUserId(currentUser.getId());
+        List<UserGamesDTO> userGamesDTO = gameUsers.stream()
+                .filter(gameUser -> gameUser.getGame().getStatus() == GameStatus.ACTIVE)
+                .map(gameUser -> new UserGamesDTO(
+                        gameUser.getGame().getId(),
+                        gameUser.getGame().getRpgSystem().getId(),
+                        gameUser.getGame().getName(),
+                        gameUser.getGame().getDescription()
+                )).toList();
+        Map<String, Object> response = CustomReturnables.getOkResponseMap("Pobrano listę gier użytkownika.");
+        response.put("userGames", userGamesDTO);
+        return response;
     }
 
     public List<UserGamesDTO> getUserGames(User currentUser) {
@@ -115,7 +146,7 @@ public class GameService {
         }
 
         game.setName(name);
-        game.setGameMaster(currentUser);
+        game.setOwner(currentUser);
         game.setStatus(GameStatus.valueOf("ACTIVE"));
         gameRepository.save(game);
 
@@ -144,13 +175,20 @@ public class GameService {
             throw new IllegalArgumentException("Użytkownik jest już w grze.");
         }
 
+        // Sprawdź, czy gra jest aktywna
+        if (game.getStatus() != GameStatus.ACTIVE) {
+            throw new IllegalArgumentException("Nie można dodać użytkownika do nieaktywnej gry.");
+        }
+
         Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
         String currentUsername = authentication.getName();
         User currentUser = userRepository.findByUsername(currentUsername)
                 .orElseThrow(() -> new ResourceNotFoundException("Zalogowany użytkownik nie został znaleziony."));
 
-        if (!game.getGameMaster().getId().equals(currentUser.getId())) {
-            throw new IllegalArgumentException("Tylko GameMaster może dodawać użytkowników do swojej gry.");
+        // Sprawdzenie, czy na pewno to GM próbuje zmienić swoja gre
+        GameUsers gameUser = gameUsersRepository.findByGameIdAndUserId(request.getGameId(), currentUser.getId());
+        if (gameUser == null || gameUser.getRole() != GameUsersRole.GAMEMASTER) {
+            throw new IllegalArgumentException("Nie możesz zmienić gry gdy nie jesteś jej GameMasterem.");
         }
 
         GameUsers gameUsers = new GameUsers();
@@ -176,11 +214,17 @@ public class GameService {
                 .orElseThrow(() -> new ResourceNotFoundException("Zalogowany użytkownik nie został znaleziony."));
 
         // Sprawdzenie, czy na pewno to GM próbuje zmienić swoja gre
-        if(!currentUser.getId().equals(gameToUpdate.getGameMaster().getId())) {
+        GameUsers gameUser = gameUsersRepository.findByGameIdAndUserId(gameId, currentUser.getId());
+        if (gameUser == null || gameUser.getRole() != GameUsersRole.GAMEMASTER) {
             throw new IllegalArgumentException("Nie możesz zmienić gry gdy nie jesteś jej GameMasterem.");
         }
 
-        if(game.getName() == null && game.getGameMaster() == null && game.getDescription() == null) {
+        // Sprawdź, czy gra jest aktywna
+        if (gameToUpdate.getStatus() != GameStatus.ACTIVE) {
+            throw new IllegalArgumentException("Nie można edytować nieaktywnej gry.");
+        }
+
+        if(game.getName() == null && game.getOwner() == null && game.getDescription() == null) {
             throw new IllegalArgumentException("Brak danych do aktualizacji.");
         }
 
@@ -196,19 +240,19 @@ public class GameService {
                 gameToUpdate.setName(game.getName());
             }
         }
-        
-        if (game.getGameMaster() != null ) {
 
-            if(gameToUpdate.getGameMaster().getId() == null) {
+        if (game.getOwner() != null ) {
+
+            if(gameToUpdate.getOwner().getId() == null) {
                 throw new IllegalArgumentException("Gra musi mieć GameMastera.");
             }
-            if(!userRepository.existsById(game.getGameMaster().getId())){
-                throw new ResourceNotFoundException("GameMaster o id " + game.getGameMaster().getId() +" nie istnieje.");
+            if(!userRepository.existsById(game.getOwner().getId())){
+                throw new ResourceNotFoundException("GameMaster o id " + game.getOwner().getId() +" nie istnieje.");
             }
 
-            if(!gameUsersRepository.existsByUserIdAndGameId(game.getGameMaster().getId(), gameId)){
+            if(!gameUsersRepository.existsByUserIdAndGameId(game.getOwner().getId(), gameId)){
                 AddUserToGameRequest addUserToGameRequest = new AddUserToGameRequest();
-                addUserToGameRequest.setUserId(game.getGameMaster().getId());
+                addUserToGameRequest.setUserId(game.getOwner().getId());
                 addUserToGameRequest.setGameId(gameId);
                 addUserToGameRequest.setRole(GameUsersRole.GAMEMASTER.toString());
                 addUserToGame(addUserToGameRequest);
@@ -216,10 +260,10 @@ public class GameService {
             Map<String, String> roleUpdateGameMaster = Map.of("role", "GAMEMASTER");
             Map<String, String> roleUpdatePlayer = Map.of("role", "PLAYER");
 
-            updateGameUserRole(gameUsersRepository.findIdByUserIdAndGameId(game.getGameMaster().getId(), gameId), roleUpdateGameMaster);
-            updateGameUserRole(gameUsersRepository.findIdByUserIdAndGameId(gameToUpdate.getGameMaster().getId(), gameId), roleUpdatePlayer);
+            updateGameUserRole(gameUsersRepository.findIdByUserIdAndGameId(game.getOwner().getId(), gameId), roleUpdateGameMaster);
+            updateGameUserRole(gameUsersRepository.findIdByUserIdAndGameId(gameToUpdate.getOwner().getId(), gameId), roleUpdatePlayer);
 
-            gameToUpdate.setGameMaster(game.getGameMaster());
+            gameToUpdate.setOwner(game.getOwner());
         }
 
         if (game.getDescription() != null ) {
@@ -247,8 +291,9 @@ public class GameService {
                 .orElseThrow(() -> new ResourceNotFoundException("Zalogowany użytkownik nie został znaleziony."));
 
         // Sprawdzenie, czy na pewno to GM próbuje zmienić swoja gre
-        if(!currentUser.getId().equals(gameToUpdate.getGameMaster().getId())) {
-            throw new IllegalArgumentException("Nie możesz zmienić gry gdy nie jesteś jej GameMasterem.");
+        GameUsers gameUser = gameUsersRepository.findByGameIdAndUserId(gameId, currentUser.getId());
+        if (gameUser == null || gameUser.getRole() != GameUsersRole.GAMEMASTER) {
+            throw new IllegalArgumentException("Nie możesz zmienić statusu gry, gdy nie jesteś jej GameMasterem.");
         }
 
         if (statusStr == null) {
@@ -274,6 +319,35 @@ public class GameService {
     }
 
     public Map<String, Object> updateGameUserRole(Long gameUserId, Map<String, String> request) {
+        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+        String currentUsername = authentication.getName();
+        User currentUser = userRepository.findByUsername(currentUsername)
+                .orElseThrow(() -> new ResourceNotFoundException("Zalogowany użytkownik nie został znaleziony."));
+
+        // Gracz od zmiany
+        GameUsers gameUser = gameUsersRepository.findById(gameUserId)
+                .orElseThrow(() -> new ResourceNotFoundException("Użytkownik gry o podanym ID nie istnieje."));
+
+        // Gra, do której przypisany jest gracz
+        Game game = gameRepository.findById(gameUser.getGame().getId())
+                .orElseThrow(() -> new ResourceNotFoundException("Gra o podanym ID nie istnieje."));
+
+        // Sprawdzenie, czy na pewno to GM próbuje zmienić swoja gre
+        GameUsers gameUserGM = gameUsersRepository.findByGameIdAndUserId(game.getId(), currentUser.getId());
+
+        if (gameUserGM == null || gameUserGM.getRole() != GameUsersRole.GAMEMASTER) {
+            throw new IllegalArgumentException("Nie możesz zmienić roli użytkownika, gdy nie jesteś jej GameMasterem.");
+        }
+
+        // Sprawdzenie, czy gra jest aktywna
+        if (game.getStatus() != GameStatus.ACTIVE) {
+            throw new IllegalArgumentException("Nie można zmienić roli w nieaktywnej grze.");
+        }
+
+        if (request == null || request.isEmpty()) {
+            throw new IllegalArgumentException("Brak danych do aktualizacji.");
+        }
+
         String roleStr = request.get("role");
 
         if (roleStr == null) {
